added vue and made some junk better

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-
         <title>Memory</title>
-
         <meta name="description" content="Alfa-college | Het spel Skylander Memory - Lessen JavaScript">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -180,14 +178,10 @@
                     </div>
                 </div>
             </main>
-
-            <footer>
-                <!-- WE HEBBEN NOG GEEN FOOTER -->
-            </footer>
+            <!-- dus kan de footer ook wel weg -->
 
         </div>
-
-        <!-- JAVASCRIPT -->
+        <script src="js/vue.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
