added some configs to main.js

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 </tbody>
                             </table>
 
-                            <button class="game-btn" id="game-button">Start</button>
+                            <button class="game-btn" id="game-button" v-on:click="startgame()">Start</button>
                         </div>
                     </div>
                 </div>
